# ml-pipeline

./: .gitignore  README.md  docker-compose.yml  notebook.ipynb  pyproject.toml  test.http
docker/: aws_credentials  metaflow-config.json
docker/datasets/: submission.csv
docker/haproxy/: haproxy.cfg
docker/mc/: Dockerfile  entrypoint.sh
docker/mlflow/: Dockerfile
docker/postgres-init/: init.sh
ml_pipeline/: api.py  preprocess.py  trainflow.py
